Fixed incorrect page number in page preview mode. (fdo#33155)

When the window is large enough to show several 'Page X' strings,
the page number was not properly incremented.  This commit fixes
it.